# denigma-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/text-expression-classifier/: CMakeLists.txt  README.md
examples/text-expression-classifier/src/: main.cpp
examples/text-expression-classifier/test/data/: exps.enigmaxml  exps.musx
examples/wasm-enigmaxml/: CMakeLists.txt  README.md
examples/wasm-enigmaxml/src/: denigma_wasm_enigmaxml.cpp
examples/wasm-enigmaxml/test/: smoke.mjs
examples/wasm-enigmaxml/web/: index.html  main.js
examples/wasm-mnx/: CMakeLists.txt  README.md
examples/wasm-mnx/src/: denigma_wasm_mnx.cpp
examples/wasm-mnx/test/: smoke.mjs
examples/wasm-mnx/test/data/: sample.musx
examples/wasm-mnx/web/: index.html  main.js
